--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,71 +5,80 @@ import Button from "../components/Button.astro";
 import Card from "../components/Cards.astro";
 import "../styles/index.css";
 import Cards from "../components/Cards.astro";
+
+const data = await fetch(
+  "https://qfcbmxwfnjdobywkwfei.supabase.co/rest/v1/lineup?order=id.asc",
+  {
+    method: "GET",
+    headers: {
+      apikey:
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFmY2JteHdmbmpkb2J5d2t3ZmVpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTA0ODkyNDAsImV4cCI6MjAyNjA2NTI0MH0.4phUCO3QegbetzxWRquRHEWOYbF8TctgcydbEjOxnxI",
+    },
+  }
+).then((res) => res.json());
+
+console.log(data);
 ---
 
+<!-- 
+url: https://qfcbmxwfnjdobywkwfei.supabase.co/rest/v1/lineup?
+apikey: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFmY2JteHdmbmpkb2J5d2t3ZmVpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTA0ODkyNDAsImV4cCI6MjAyNjA2NTI0MH0.4phUCO3QegbetzxWRquRHEWOYbF8TctgcydbEjOxnxI
+ -->
 <MainLayout>
-
   <div class="hero-image">
-    <img src="" alt="">
+    <img src="" alt="" />
     <div class="hero-text">
       <h1>Karrusel Festival</h1>
       <p id="h2_index">3 days of house, disco and tecno in the woods</p>
     </div>
     <div class="hero-button">
       <Button size="box" type="web" link_to="/map">See Full Map</Button>
-     <Button size="box" type="web" link_to="/lineup">See Lineup</Button>
+      <Button size="box" type="web" link_to="/lineup">See Lineup</Button>
     </div>
   </div>
 
-<div class="card">
-  <Card artist="SKIN ON SKIN" stage="MANEGEN">
-    <img
-    src="../../public/img/lineup/skin_on_skin.png"
-    alt="Picture of the artist Mira"
-  />
-  </Card>
-  <Card artist="RSS DISCO" stage="TRIBUNEN">
-    <img
-    src="../../public/img/lineup/rss_disco.png"
-    alt="Picture of the artist Kölsch"
-  />
-  </Card>
-  <Card artist="ÂME" stage="MANEGEN">
-    <img
-    src="../../public/img/lineup/âme.png"
-    alt="Picture of the band Âme"
-  /> 
-  </Card>
-</div>
-<div class="SeeAllArtist_button button_flex">
- <div class="arrow">&#10230;</div>
- <Button size="box" type="web" link_to="/lineup">See all artist</Button>
-</div>
-
-
+  <div class="card">
+    <Card artist="SKIN ON SKIN" stage="MANEGEN">
+      <img
+        src="../../public/img/lineup/skin_on_skin.png"
+        alt="Picture of the artist Mira"
+      />
+    </Card>
+    <Card artist="RSS DISCO" stage="TRIBUNEN">
+      <img
+        src="../../public/img/lineup/rss_disco.png"
+        alt="Picture of the artist Kölsch"
+      />
+    </Card>
+    <Card artist="ÂME" stage="MANEGEN">
+      <img
+        src="../../public/img/lineup/âme.png"
+        alt="Picture of the band Âme"
+      />
+    </Card>
+  </div>
+  <div class="SeeAllArtist_button button_flex">
+    <div class="arrow">&#10230;</div>
+    <Button size="box" type="web" link_to="/lineup">See all artist</Button>
+  </div>
 
   <section class="grid_1-2">
     <div class="button_flex">
       <div class="arrow">&#10230;</div>
-      <Button size="box" type="web" link_to="/about">About Karrusel Festival</Button>
+      <Button size="box" type="web" link_to="/about"
+        >About Karrusel Festival</Button
+      >
     </div>
     <img src="/public/lys_karrusel.svg" alt="" />
   </section>
 
-  <section >
+  <section>
     <div class="flex">
-    <h2>Location</h2>
-    <div class="button_flex">
-      <div class="arrow">&#10230;</div>
-      <Button size="box" type="web" link_to="/map"> Full Map</Button>
+      <h2>Location</h2>
+      <div class="button_flex">
+        <div class="arrow">&#10230;</div>
+        <Button size="box" type="web" link_to="/map"> Full Map</Button>
+      </div>
     </div>
-</div>
-
-
-
   </section>
-
-
-
-
 </MainLayout>
