--- a/src/pages/singleview.astro
+++ b/src/pages/singleview.astro
@@ -14,12 +14,12 @@ import Header from "../components/Header.astro";
     <div class="single_grid">
       <div class="info_flex">
         <h3>LOCATION</h3>
-        <p>MAGENEN</p>
+        <p class="stage">MAGENEN</p>
         <h3>SHOW DATE</h3>
-        <p>SATURDAY</p>
+        <p class="date">SATURDAY</p>
         <h3>MORE</h3>
-        <a href="">Spotify</a>
-        <a href="">Instagram</a>
+        <a class="spotify" href="">Spotify</a>
+        <a class="insta" href="">Instagram</a>
       </div>
       <div class="titel_flex">
         <h1>Artist Name</h1>
