--- a/src/pages/singleview.astro
+++ b/src/pages/singleview.astro
@@ -23,7 +23,13 @@ import Header from "../components/Header.astro";
       </div>
       <div class="titel_flex">
         <h1>Artist Name</h1>
-        <h2>Not many DJs can claim to experience as meteoric, grassroots ascent as SPFDJ. Having established a remarkable energy, style and attitude on the underground techno circuits of both London and Berlin, she is known for inspiring debauchery and sweat-soaked hedonism on an international scale.</h2>
+        <h2>
+          Not many DJs can claim to experience as meteoric, grassroots ascent as
+          SPFDJ. Having established a remarkable energy, style and attitude on
+          the underground techno circuits of both London and Berlin, she is
+          known for inspiring debauchery and sweat-soaked hedonism on an
+          international scale.
+        </h2>
         <Button size="box">See all artists</Button>
       </div>
     </div>
