--- a/src/pages/lineup.astro
+++ b/src/pages/lineup.astro
@@ -4,10 +4,10 @@ import "../styles/lineup.css";
 import MainLayout from "../layouts/MainLayout.astro";
 import Cards from "../components/Cards.astro";
 import Button from "../components/Button.astro";
-import Artist from "../components/Artist.astro";
+import Fetch from "../components/Fetch.astro";
 
 const data = await fetch(
-  "https://qfcbmxwfnjdobywkwfei.supabase.co/rest/v1/lineup?order=id.asc&limit=3",
+  "https://qfcbmxwfnjdobywkwfei.supabase.co/rest/v1/lineup",
   {
     method: "GET",
     headers: {
@@ -16,8 +16,6 @@ const data = await fetch(
     },
   }
 ).then((res) => res.json());
-
-console.log(data);
 ---
 
 <!-- 
@@ -30,11 +28,11 @@ apikey: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InF
   <section class="artist_cards">
     {
       data.map((artist) => {
-        return <Artist data={artist} />;
+        return <Fetch data={artist} />;
       })
     }
   </section>
-  <h2 class="h2_2">THURSDAY</h2>
+  <!-- <h2 class="h2_2">THURSDAY</h2>
   <div class="artist_cards">
     <Cards artist="ÂME" stage="MANEGEN">
       <img src="../../img/lineup/âme.png" alt="Picture of the band Âme" />
@@ -48,7 +46,7 @@ apikey: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InF
     <Cards artist="MIRA" stage="TRIBUNEN">
       <img src="../../img/lineup/mira.png" alt="Picture of the artist Mira" />
     </Cards>
-  </div>
+  </div> -->
 
   <!-- Artist rows -->
   <div class="artist_date">
