--- a/src/pages/artist/[slug].astro
+++ b/src/pages/artist/[slug].astro
@@ -35,6 +35,7 @@ console.log(myData);
 // }
 ---
 
-<!-- <MainLayout>
+<MainLayout>
   <h1>{myData.name}</h1>
-</MainLayout> -->
+  <h2>{myData.description}</h2>
+</MainLayout>
