--- a/src/components/Artist.astro
+++ b/src/components/Artist.astro
@@ -1,3 +1,30 @@
+<!-- ---
+export async function getStaticPaths () {
+    const url = "https://qfcbmxwfnjdobywkwfei.supabase.co/rest/v1/lineup";
+
+    const options = {
+        headers: {
+            apikey: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFmY2JteHdmbmpkb2J5d2t3ZmVpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTA0ODkyNDAsImV4cCI6MjAyNjA2NTI0MH0.4phUCO3QegbetzxWRquRHEWOYbF8TctgcydbEjOxnxI" }
+        };
+
+const data = await fetch(url, options).then(response => response.json());
+
+return data.map((artist) => {
+    return {
+        params: {slug: artist.slug}, 
+        props: { artist },
+    };
+}); 
+}
+const {artist} = Astro.props;
 ---
-const { artist, stage, date, spotify, insta } = Astro.props;
----
+
+<article>
+  <div class="artist_img">{artist.}</div>
+  <p class="stage">{stage}</p>
+  <p class="date">{date}</p>
+  <a class="spotify" href="">{spotify}</a>
+  <a class="insta" href="">{insta}</a>
+  <h1 class="artist_name">{name}</h1>
+  <h2 class="artist_info">{info}</h2>
+</article> -->
