--- a/src/styles/single.css
+++ b/src/styles/single.css
@@ -1,4 +1,92 @@
 @media screen and (min-width: 700px) {
+  h2 {
+    font-size: 24px;
+  }
+  .background {
+    background-image: url("../public/singleview_artist.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    margin-left: -2em;
+    margin-right: -2em;
+    margin-top: -8em;
+    z-index: -1;
+  }
+
+  .indhold_flex {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(09, 09, 09, 0.5);
+  }
+  .information {
+    margin-left: 10%;
+    margin-top: 2%;
+  }
+  .information p {
+    margin-bottom: 2em;
+  }
+  .artist_name {
+    margin-right: 20%;
+    margin-left: 15%;
+  }
+  Button {
+    width: 200px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  /*  .background {
+    background-image: url("../public/singleview_artist.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    margin-left: -2em;
+    margin-right: -2em;
+    margin-top: -8em;
+    z-index: -1;
+    position: relative;
+  } */
+  .mobile_img {
+    content: url("../public/singleview_artist.jpg");
+    width: 100vw;
+    margin-left: -2em;
+    margin-right: -2em;
+    margin-top: -8em;
+    z-index: -1;
+    position: relative;
+  }
+  .indhold_flex {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 2em;
+  }
+  .artist_name {
+    margin-left: 15%;
+    margin-right: 12%;
+  }
+  .information {
+    margin-left: 15%;
+    margin-right: 20%;
+    margin-bottom: 10%;
+  }
+
+  h2 {
+    font-size: 14px;
+    margin-bottom: 5%;
+  }
+  button {
+    font-size: 20px;
+    margin-top: 15%;
+    margin-bottom: 10%;
+  }
+}
+
+/* @media screen and (min-width: 700px) {
   body {
     margin: 0;
     padding: 0;
@@ -33,8 +121,7 @@
   .grey_frame {
     width: 100%;
     height: 502px;
-    background-color: #090909;
-    opacity: 0.5;
+    background-color: rgba(42, 42, 42, 0.7);
     position: absolute;
     left: 0;
     top: 60%;
@@ -97,7 +184,7 @@
     margin-top: -8em;
     z-index: -1;
     /* Position: Baggrundsbilledet */
-    background-position: center;
+/*     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -109,3 +196,4 @@
     margin-top: 10%;
   }
 }
+ */
