--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,6 +36,10 @@
 </header>
 
 <style>
+  header {
+    position: relative;
+    z-index: 2;
+  }
   .navbar {
     display: flex;
     justify-content: space-between;
