--- a/src/components/ArtistCards.astro
+++ b/src/components/ArtistCards.astro
@@ -6,7 +6,7 @@ const { data } = Astro.props;
 <a href={`artist/${data.slug}`}>
   <article>
     <figure class="card_background">
-      <img src="../../img/lineup/âme.png" alt="" />
+      <img src=`../../img/lineup/${data.image}` alt="" />
     </figure>
     <h3 class="h3_2">{data.name}</h3>
     <h4>{data.stage}</h4>
