--- a/src/styles/lineup.css
+++ b/src/styles/lineup.css
@@ -1,32 +1,24 @@
 .h2_2 {
     margin: 50px 0 30px 0;
     font-weight: 600;
-}
+  }
 .artist_cards {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 450px));
     gap: 10px;
-}
-.dot {
-    height: 15px;
-    width: 15px;
-    background-color: #fff;
-    border-radius: 50%;
-    display: inline-block;
-    filter: blur(2px);
-}
+  }
 
 .artist_date {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-
 .artist_row {
     position: relative;
     display: flex;
     flex-direction: row;
-    gap: 28px;
+    flex-wrap: wrap;
+    width: 60%;
     align-items: baseline;
     margin-bottom: 50px;
 }
