--- a/src/pages/artist/[slug].astro
+++ b/src/pages/artist/[slug].astro
@@ -59,27 +59,6 @@ console.log(myData);
       </article>
     </section>
   </div>
-
-  <!--   <article>
-    <div class="artist_img"></div>
-    <div class="grey_frame"></div>
-    <div class="single_grid">
-      <div class="info_flex">
-        <h3>LOCATION</h3>
-        <p>MAGENEN</p>
-        <h3>SHOW DATE</h3>
-        <p>SATURDAY</p>
-        <h3>MORE</h3>
-        <a href="">Spotify</a>
-        <a href="">Instagram</a>
-      </div>
-      <div class="titel_flex">
-        <h1>Artist Name</h1>
-        <h2>Not many DJs can claim to experience as meteoric, grassroots ascent as SPFDJ. Having established a remarkable energy, style and attitude on the underground techno circuits of both London and Berlin, she is known for inspiring debauchery and sweat-soaked hedonism on an international scale.</h2>
-        <Button size="box">See all artists</Button>
-      </div>
-    </div>
-  </article> -->
 </MainLayout>
 
 <style>
@@ -125,3 +104,79 @@ console.log(myData);
     margin-bottom: 25px;
   }
 </style>
+
+<!-- @media screen and (min-width: 700px) {
+  h2 {
+    font-size: 24px;
+  }
+  .background {
+    background-image: url("../public/singleview_artist.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    margin-left: -2em;
+    margin-right: -2em;
+    margin-top: -8em;
+    z-index: -1;
+  }
+
+  .indhold_flex {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(09, 09, 09, 0.5);
+  }
+  .information {
+    margin-left: 10%;
+    margin-top: 2%;
+  }
+  .information p {
+    margin-bottom: 2em;
+  }
+  .artist_name {
+    margin-right: 20%;
+    margin-left: 15%;
+  }
+  Button {
+    width: 200px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .mobile_img {
+    content: url("../public/singleview_artist.jpg");
+    width: 100vw;
+    margin-left: -2em;
+    margin-right: -2em;
+    margin-top: -8em;
+    z-index: -1;
+    position: relative;
+  }
+  .indhold_flex {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 2em;
+  }
+  .artist_name {
+    margin-left: 15%;
+    margin-right: 12%;
+  }
+  .information {
+    margin-left: 15%;
+    margin-right: 20%;
+    margin-bottom: 10%;
+  }
+
+  h2 {
+    font-size: 14px;
+    margin-bottom: 5%;
+  }
+  button {
+    font-size: 20px;
+    margin-top: 15%;
+    margin-bottom: 10%;
+  }
+} -->
