--- a/src/styles/lineup.css
+++ b/src/styles/lineup.css
@@ -30,9 +30,9 @@
 }
 .illustration_woman {
     position: absolute;
-    top: -280px;
-    right: 180px;
-    z-index: 1;
+    top: 220%;
+    right: -25px;
+    z-index: -1;
     width: 30%;
 }
 
@@ -43,7 +43,7 @@
 
     .h2_2 {
         margin: 15px 0 10px 0;
-        font-size: 35px;
+        font-size: 40px;
     }
     h3 {
         font-size: 24px;
@@ -65,9 +65,9 @@
         left: -10px;
     }
     .illustration_woman {
-        top: -60px;
-        right: -30px;
-        width: 90%;
+        top: 550%;
+        width: 60%;
+        
     }
 
 }
