--- a/src/components/ArtistCards.astro
+++ b/src/components/ArtistCards.astro
@@ -16,11 +16,21 @@ const { data } = Astro.props;
 <style>
   .card_background {
     background-image: url("../../img/lineup/card_background.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     width: fit-content;
     padding: 27px;
   }
   figure {
     margin-bottom: 10px;
+  }
+  figure img {
+    object-fit: cover;
+    align-self: stretch;
+    height: 400px;
+    width: 350px;
+    filter: grayscale(100%);
   }
   figure:hover {
     opacity: 0.7;
